[gd_scene load_steps=27 format=2]

[ext_resource path="res://GameHUDRelated/BottomPanelBackground.png" type="Texture" id=1]
[ext_resource path="res://GameHUDRelated/GoldPanel/GoldIndicatorBackground.png" type="Texture" id=2]
[ext_resource path="res://Fonts/consolas/CONSOLA.TTF" type="DynamicFontData" id=3]
[ext_resource path="res://GameHUDRelated/BuySellPanel/BuySellLevelRollPanel.tscn" type="PackedScene" id=4]
[ext_resource path="res://GameElementsRelated/GameElements.gd" type="Script" id=5]
[ext_resource path="res://GameHUDRelated/ColorWheelPanel/Whole_ColorWheel_CenterPlain.png" type="Texture" id=6]
[ext_resource path="res://GameElementsRelated/TowerInventoryRelated/TowerInventoryBench.tscn" type="PackedScene" id=7]
[ext_resource path="res://GameElementsRelated/TowerManager.gd" type="Script" id=8]
[ext_resource path="res://GameElementsRelated/InMapPlacablesManager.gd" type="Script" id=9]
[ext_resource path="res://GameElementsRelated/InMapPlacablesRelated/InMapAreaPlacable.tscn" type="PackedScene" id=10]
[ext_resource path="res://GameHUDRelated/LeftSidePanel/LeftPanel.tscn" type="PackedScene" id=11]
[ext_resource path="res://GameElementsRelated/SynergyManager.gd" type="Script" id=12]
[ext_resource path="res://EnemyRelated/EnemyPath.tscn" type="PackedScene" id=13]
[ext_resource path="res://GameHUDRelated/BottomPanel/IngredientModeNotifiyPanel.png" type="Texture" id=14]
[ext_resource path="res://GameElementsRelated/InnerBottomPanel.gd" type="Script" id=15]
[ext_resource path="res://GameHUDRelated/RightSidePanel/RightSidePanel.tscn" type="PackedScene" id=16]
[ext_resource path="res://GameHUDRelated/BuySellPanel/SellPanel.tscn" type="PackedScene" id=17]
[ext_resource path="res://GameElementsRelated/GoldManager.gd" type="Script" id=18]
[ext_resource path="res://GameElementsRelated/StageRoundManager.gd" type="Script" id=19]
[ext_resource path="res://GameElementsRelated/HealthManager.gd" type="Script" id=20]
[ext_resource path="res://GameElementsRelated/EnemyManager.gd" type="Script" id=21]

[sub_resource type="DynamicFont" id=1]
size = 10
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 13
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 24
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
size = 12
font_data = ExtResource( 3 )

[sub_resource type="Curve2D" id=5]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 289.495, 381.743, 0, 0, 0, 0, 339.797, 280.276, 0, 0, 0, 0, 596.841, 265.684, 0, 0, 0, 0, 614.8, 187.111, 0, 0, 0, 0, 382.451, 203.948 )
}

[node name="GameElements" type="Node"]
script = ExtResource( 5 )

[node name="TowerInventoryBench" parent="." instance=ExtResource( 7 )]
position = Vector2( 475, 410 )

[node name="TowerManager" type="Node" parent="."]
script = ExtResource( 8 )

[node name="MapManager" type="Node" parent="."]

[node name="InMapPlacablesManager" type="Node" parent="MapManager"]
script = ExtResource( 9 )

[node name="InMapAreaPlacable" parent="MapManager/InMapPlacablesManager" instance=ExtResource( 10 )]
position = Vector2( 295.299, 287.571 )

[node name="InMapAreaPlacable4" parent="MapManager/InMapPlacablesManager" instance=ExtResource( 10 )]
position = Vector2( 644.18, 274.922 )

[node name="InMapAreaPlacable5" parent="MapManager/InMapPlacablesManager" instance=ExtResource( 10 )]
position = Vector2( 133.425, 73.0877 )

[node name="InMapAreaPlacable2" parent="MapManager/InMapPlacablesManager" instance=ExtResource( 10 )]
position = Vector2( 725.761, 26.6853 )

[node name="InMapAreaPlacable3" parent="MapManager/InMapPlacablesManager" instance=ExtResource( 10 )]
position = Vector2( 416.897, 316.078 )

[node name="InMapAreaPlacable6" parent="MapManager/InMapPlacablesManager" instance=ExtResource( 10 )]
position = Vector2( 528.481, 310.109 )

[node name="InMapAreaPlacable7" parent="MapManager/InMapPlacablesManager" instance=ExtResource( 10 )]
position = Vector2( 127.96, 31.4293 )

[node name="InMapAreaPlacable8" parent="MapManager/InMapPlacablesManager" instance=ExtResource( 10 )]
position = Vector2( 535.414, 231.227 )

[node name="InMapAreaPlacable9" parent="MapManager/InMapPlacablesManager" instance=ExtResource( 10 )]
position = Vector2( 127.96, 112.246 )

[node name="InMapAreaPlacable10" parent="MapManager/InMapPlacablesManager" instance=ExtResource( 10 )]
position = Vector2( 781.233, 60.6133 )

[node name="SynergyManager" type="Node" parent="."]
script = ExtResource( 12 )

[node name="GoldManager" type="Node" parent="."]
script = ExtResource( 18 )

[node name="HealthManager" type="Node" parent="."]
script = ExtResource( 20 )

[node name="StageRoundManager" type="Node" parent="."]
script = ExtResource( 19 )

[node name="EnemyManager" type="Node" parent="."]
script = ExtResource( 21 )

[node name="BottomPanel" type="MarginContainer" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -100.0
mouse_filter = 2
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="BottomPanel"]
margin_right = 960.0
margin_bottom = 100.0
mouse_filter = 2
texture = ExtResource( 1 )

[node name="HBoxContainer" type="MarginContainer" parent="BottomPanel"]
margin_right = 960.0
margin_bottom = 100.0

[node name="ColorWheelPanel" type="MarginContainer" parent="BottomPanel/HBoxContainer"]
margin_top = 10.0
margin_right = 90.0
margin_bottom = 90.0
mouse_filter = 2
size_flags_horizontal = 2
size_flags_vertical = 6
custom_constants/margin_left = 10

[node name="ColorWheelSprite" type="TextureButton" parent="BottomPanel/HBoxContainer/ColorWheelPanel"]
margin_left = 10.0
margin_right = 90.0
margin_bottom = 80.0
focus_mode = 0
size_flags_horizontal = 6
size_flags_vertical = 6
action_mode = 0
enabled_focus_mode = 0
texture_normal = ExtResource( 6 )

[node name="VBoxContainer" type="VBoxContainer" parent="BottomPanel/HBoxContainer"]
margin_left = 104.0
margin_right = 855.0
margin_bottom = 100.0
mouse_filter = 2
size_flags_horizontal = 6
custom_constants/separation = 0

[node name="GoldPanel" type="MarginContainer" parent="BottomPanel/HBoxContainer/VBoxContainer"]
margin_left = 346.0
margin_right = 405.0
margin_bottom = 19.0
mouse_filter = 2
size_flags_horizontal = 4

[node name="GoldBackground" type="TextureRect" parent="BottomPanel/HBoxContainer/VBoxContainer/GoldPanel"]
margin_right = 59.0
margin_bottom = 19.0
mouse_filter = 2
texture = ExtResource( 2 )

[node name="MarginContainer3" type="MarginContainer" parent="BottomPanel/HBoxContainer/VBoxContainer/GoldPanel"]
margin_right = 59.0
margin_bottom = 19.0
custom_constants/margin_right = 2

[node name="MarginContainer" type="MarginContainer" parent="BottomPanel/HBoxContainer/VBoxContainer/GoldPanel/MarginContainer3"]
margin_right = 29.0
margin_bottom = 19.0
mouse_filter = 2
size_flags_horizontal = 2
custom_constants/margin_top = 2
custom_constants/margin_left = 5

[node name="GoldTextLabel" type="Label" parent="BottomPanel/HBoxContainer/VBoxContainer/GoldPanel/MarginContainer3/MarginContainer"]
margin_left = 5.0
margin_top = 2.0
margin_right = 29.0
margin_bottom = 19.0
size_flags_horizontal = 5
size_flags_vertical = 1
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.992157, 0.752941, 0.0313726, 1 )
text = "Gold"
valign = 1

[node name="MarginContainer2" type="MarginContainer" parent="BottomPanel/HBoxContainer/VBoxContainer/GoldPanel/MarginContainer3"]
margin_left = 30.0
margin_right = 57.0
margin_bottom = 19.0
mouse_filter = 2
size_flags_horizontal = 10
custom_constants/margin_right = 2
custom_constants/margin_top = 1
custom_constants/margin_left = 18

[node name="GoldAmountLabel" type="Label" parent="BottomPanel/HBoxContainer/VBoxContainer/GoldPanel/MarginContainer3/MarginContainer2"]
margin_left = 18.0
margin_top = 1.0
margin_right = 25.0
margin_bottom = 19.0
grow_horizontal = 0
size_flags_vertical = 1
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.992157, 0.752941, 0.0313726, 1 )
text = "0"
valign = 1

[node name="HBoxContainer" type="HBoxContainer" parent="BottomPanel/HBoxContainer/VBoxContainer"]
margin_top = 19.0
margin_right = 751.0
margin_bottom = 100.0
mouse_filter = 2
custom_constants/separation = 20

[node name="InnerBottomPanel" type="MarginContainer" parent="BottomPanel/HBoxContainer/VBoxContainer/HBoxContainer"]
margin_right = 751.0
margin_bottom = 81.0
mouse_filter = 2
custom_constants/margin_top = 1
script = ExtResource( 15 )

[node name="BuySellLevelRollPanel" parent="BottomPanel/HBoxContainer/VBoxContainer/HBoxContainer/InnerBottomPanel" instance=ExtResource( 4 )]
margin_top = 1.0
margin_right = 751.0
margin_bottom = 81.0
mouse_filter = 0

[node name="SellPanel" parent="BottomPanel/HBoxContainer/VBoxContainer/HBoxContainer/InnerBottomPanel" instance=ExtResource( 17 )]
margin_top = 1.0
margin_right = 751.0
margin_bottom = 81.0

[node name="IngredientModeNotification" type="MarginContainer" parent="BottomPanel/HBoxContainer/VBoxContainer/HBoxContainer/InnerBottomPanel"]
margin_top = 1.0
margin_right = 751.0
margin_bottom = 81.0

[node name="Background" type="TextureRect" parent="BottomPanel/HBoxContainer/VBoxContainer/HBoxContainer/InnerBottomPanel/IngredientModeNotification"]
margin_right = 751.0
margin_bottom = 80.0
mouse_filter = 2
texture = ExtResource( 14 )

[node name="Marginer" type="MarginContainer" parent="BottomPanel/HBoxContainer/VBoxContainer/HBoxContainer/InnerBottomPanel/IngredientModeNotification"]
margin_right = 751.0
margin_bottom = 80.0
mouse_filter = 2
custom_constants/margin_top = 15
custom_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="BottomPanel/HBoxContainer/VBoxContainer/HBoxContainer/InnerBottomPanel/IngredientModeNotification/Marginer"]
margin_top = 15.0
margin_right = 751.0
margin_bottom = 65.0
mouse_filter = 2
custom_constants/separation = 10

[node name="IngredientModeTitle" type="Label" parent="BottomPanel/HBoxContainer/VBoxContainer/HBoxContainer/InnerBottomPanel/IngredientModeNotification/Marginer/VBoxContainer"]
margin_right = 751.0
margin_bottom = 25.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.992157, 0.752941, 0.0313726, 1 )
text = "Combine Ingredients Mode"
align = 1

[node name="Label2" type="Label" parent="BottomPanel/HBoxContainer/VBoxContainer/HBoxContainer/InnerBottomPanel/IngredientModeNotification/Marginer/VBoxContainer"]
margin_top = 35.0
margin_right = 751.0
margin_bottom = 48.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0.992157, 0.752941, 0.0313726, 1 )
text = "Drag towers to receipient to buff the receiving tower"
align = 1

[node name="ExtraSidePanel" type="MarginContainer" parent="BottomPanel/HBoxContainer"]
margin_left = 940.0
margin_top = 50.0
margin_right = 960.0
margin_bottom = 50.0
grow_horizontal = 0
grow_vertical = 2
mouse_filter = 2
size_flags_horizontal = 10
size_flags_vertical = 6
custom_constants/margin_right = 20

[node name="RightSidePanel" parent="." instance=ExtResource( 16 )]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -120.0
margin_right = 0.0
margin_bottom = 440.0

[node name="LeftsidePanel" parent="." instance=ExtResource( 11 )]
mouse_filter = 0

[node name="EnemyPath" parent="." instance=ExtResource( 13 )]
curve = SubResource( 5 )
[connection signal="pressed" from="BottomPanel/HBoxContainer/ColorWheelPanel/ColorWheelSprite" to="." method="_on_ColorWheelSprite_pressed"]
[connection signal="level_down" from="BottomPanel/HBoxContainer/VBoxContainer/HBoxContainer/InnerBottomPanel/BuySellLevelRollPanel" to="." method="_on_BuySellLevelRollPanel_level_down"]
[connection signal="level_up" from="BottomPanel/HBoxContainer/VBoxContainer/HBoxContainer/InnerBottomPanel/BuySellLevelRollPanel" to="." method="_on_BuySellLevelRollPanel_level_up"]
[connection signal="reroll" from="BottomPanel/HBoxContainer/VBoxContainer/HBoxContainer/InnerBottomPanel/BuySellLevelRollPanel" to="." method="_on_BuySellLevelRollPanel_reroll"]
[connection signal="tower_bought" from="BottomPanel/HBoxContainer/VBoxContainer/HBoxContainer/InnerBottomPanel/BuySellLevelRollPanel" to="." method="_on_BuySellLevelRollPanel_tower_bought"]
